name:                feed-xmlbf
version:             0.0.1.0
synopsis:            xmlbf To and From Xml instances for feed
description:         Turn /feed/ Atom and RSS types into xmlbf Xml definitions.
license:             BSD3
license-file:        LICENSE
author:              John Soo
maintainer:          jsoo1@asu.edu
copyright:           2020 John Soo
category:            Text
build-type:          Simple
cabal-version:       >=1.10
tested-with:         ghc == 8.6.5

library
  exposed-modules: Text.Atom.Xmlbf
  build-depends: base >=4.12 && <4.13
               , feed >=1.2 && <1.4
               , text >=1.2 && <1.3
               , unordered-containers >=0.2 && <0.3
               , xmlbf ==0.6.*
               , xml-types ==0.3.*
               , xml-types-xmlbf ==0.0.*
  hs-source-dirs:      .
  default-language:    Haskell2010
