name:                feed-xmlbf
version:             0.0.1.1
synopsis:            xmlbf To and From Xml instances for feed
description:         Turn /feed/ Atom and RSS types into xmlbf Xml definitions.
license:             BSD3
license-file:        LICENSE
author:              John Soo
maintainer:          jsoo1@asu.edu
copyright:           2020 John Soo
category:            Text
build-type:          Simple
cabal-version:       >=1.10
tested-with:         ghc == 9.2.8

library
  exposed-modules: Text.Atom.Xmlbf
  build-depends: base
               , feed
               , text
               , unordered-containers
               , xmlbf
               , xml-types
               , xml-types-xmlbf
  hs-source-dirs:      .
  default-language:    Haskell2010
